# Titan

./: .gitignore  1  Cargo.toml  Makefile  README.md  build.rs  log.txt  net.nnue  nohup.out  out.txt  profile.json  sprt.sh  st.txt  t.sh  test.txt
.cargo/: config
scripts/: commit-msg  convert.py  go_nodes.py  play_match.py  sprt.sh
src/: Board.rs  FEN.rs  Moves.rs  Pieces.rs  UCI.rs  attack_boards.rs  bench.rs  bit_hacks.rs  bitboard.rs  board.rs  chess_move.rs  consts.rs  correction.rs  eval.rs  fen.rs  heatmaps.rs  history_table.rs  init.rs  magics.rs  main.rs  movegen.rs  movegenerator.rs  movelist.rs  movepicker.rs  moves.rs  old_moves.rs  perft.rs  pieces.rs  pleco_magics.rs  search.rs  see.rs  spsa.rs  square.rs  thread.rs  transposition.rs  uci.rs  zobrist.rs
src/board/: board.rs  fen.rs  history.rs  lib.rs  mod.rs  move_history.rs  undo.rs  zobrist.rs
src/engine/: ethereal_perft.epd  mod.rs  perft.rs  transposition.rs  uci.rs
src/eval/: accumulator.rs  eval.rs  mod.rs  network.rs  nnue.rs  simd.rs
src/moves/: attack_boards.rs  lib.rs  magics.rs  mod.rs  movegenerator.rs  movelist.rs  movepicker.rs  moves.rs
src/search/: alpha_beta.rs  alphabeta.rs  eval.rs  game_time.rs  history.rs  history_heuristics.rs  history_table.rs  killers.rs  lmr_table.rs  mod.rs  mtdf.rs  pvs.rs  quiescence.rs  search.rs  search_stats.rs  see.rs  thread.rs
src/types/: bitboard.rs  mod.rs  pieces.rs  square.rs
