[package]
name = "titan"
version = "0.1.0"
edition = "2021"
authors = ["Jeff Powell"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
avx512 = []

[dependencies]
itertools = "0.11.0"
arr_macro = "0.2.1"
arrayvec = "0.7.4"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
panic = "abort"
incremental = true

[profile.profile]
inherits = "release"
debug = true
strip = false
