[package]
name = "titan"
version = "1.1.0"
edition = "2021"
authors = ["Jeff Powell"]
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
avx512 = []

[dependencies]
arrayvec = "0.7.4"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
strip = true
panic = "abort"
incremental = true

[profile.dev]
overflow-checks = false
